2005-10-24  Darin Adler  <darin@apple.com>

        Reviewed by hyatt.

        Updated tests after fixing QName validation.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5317

        * dom/xhtml/level1/core/hc_documentinvalidcharacterexceptioncreateelement-expected.txt:
        * dom/xhtml/level1/core/hc_documentinvalidcharacterexceptioncreateelement1-expected.txt:
        * dom/xhtml/level3/core/canonicalform06-expected.txt:
        * dom/xhtml/level3/core/infoset06-expected.txt:
        * dom/xhtml/level3/core/wellformed01-expected.txt:
        * dom/xhtml/level3/core/wellformed02-expected.txt:

2005-10-23  Timothy Hatcher  <timothy@apple.com>

        Layout test to go with fix for bugzilla bug 3442 
        Adds support for :first-of-type CSS3 pseudo-selectors

        * fast/selectors/034-expected.checksum: Added.
        * fast/selectors/034-expected.png: Added.
        * fast/selectors/034-expected.txt: Added.
        * fast/selectors/034.html: Added.

2005-10-22  Darin Adler  <darin@apple.com>

        - updated pixel results for tests with results that changed recently

        * editing/selection/3690703-2-expected.checksum:
        * editing/selection/3690703-2-expected.png:
        * editing/selection/3690703-expected.checksum:
        * editing/selection/3690703-expected.png:
        * editing/selection/3690719-expected.checksum:
        * editing/selection/3690719-expected.png:
        * fast/forms/001-expected.checksum:
        * fast/forms/001-expected.png:
        * fast/forms/form-element-geometry-expected.checksum:
        * fast/forms/form-element-geometry-expected.png:
        * fast/forms/formmove3-expected.checksum:
        * fast/forms/formmove3-expected.png:
        * fast/forms/input-value-expected.checksum:
        * fast/forms/input-value-expected.png:
        * fast/selectors/064-expected.checksum:
        * fast/selectors/064-expected.png:
